# science

./: .gitignore  README.md  todoo.md
meta/: .gitignore  AGENTS.md  README.md  pyproject.toml  science.yaml  validate.sh
meta/core/: decisions.md  overview.md
meta/doc/background/topics/: analytic-flexibility-and-replication.md  bayesian-methods-continuous-belief.md  structured-scientific-knowledge.md
meta/doc/interpretations/: h01-simulator-2026-04-24.md
meta/doc/plans/: 2026-04-24-h01-engine-followups.md  2026-04-24-h01-engine-handoff.md  2026-04-24-h01-simulator.md  2026-04-24-h01-sweep-and-interpretation.md
meta/doc/questions/: 01-bioinformatics-generalizability.md
meta/notebooks/: h01_simulator_results.py
meta/papers/: references.bib
meta/specs/: h01-simulator.md
meta/specs/hypotheses/: h01-stochastic-revisiting.md
meta/src/h01_simulator/: __init__.py  cli.py  config.py  metrics.py  model.py  policies.py  sweep.py
meta/tasks/: active.md
meta/tests/: test_config.py  test_metrics.py  test_model.py  test_policies.py  test_smoke.py  test_sweep.py
science-model/: pyproject.toml
science-model/src/science_model/: __init__.py  activity.py  aspects.py  config.py  entities.py  frontmatter.py  graph.py  identity.py  ids.py  projects.py  provenance.py  reasoning.py  relations.py  search.py  source_contracts.py  source_ref.py  sync.py  tasks.py
science-model/src/science_model/ontologies/: __init__.py  registry.yaml  schema.py
science-model/src/science_model/profiles/: __init__.py  bio.py  core.py  local.py  project_specific.py  schema.py
science-model/src/science_model/schemas/: science-pkg-entity-1.0.json  science-pkg-runtime-1.0.json
science-model/tests/: test_dataset_models.py  test_entities.py  test_entity_hierarchy.py  test_frontmatter.py  test_frontmatter_dataset.py  test_graph.py  test_identity.py  test_ids.py  test_ontologies.py  test_packages.py  test_profile_manifests.py  test_profiles.py  test_projects.py  test_provenance.py  test_reasoning.py  test_relations.py  test_science_pkg_schema.py  test_source_contracts.py  test_source_ref.py  test_sync_source.py  test_tasks.py  test_typed_entities.py
science-tool/: pyproject.toml
science-tool/src/science_tool/: __main__.py  cli.py  codex_skills.py  datapackage_migrate.py  datasets_register.py  doi.py  entities.py  feedback.py  output.py  paper_fetch.py  paths.py  plan_gate.py  prose.py  questions.py  refs.py  refs_cli.py  refs_migrate.py  tasks.py  tasks_archive.py  tasks_display.py
science-tool/src/science_tool/aspects/: __init__.py  cli.py  migrate.py
science-tool/src/science_tool/big_picture/: __init__.py  cli.py  frontmatter.py  knowledge_gaps.py  literature_prefix.py  resolver.py  validator.py
science-tool/src/science_tool/causal/: __init__.py  export_chirho.py  export_pgmpy.py
science-tool/src/science_tool/curate/: __init__.py  cli.py  inventory.py
science-tool/src/science_tool/dag/: __init__.py  audit.py  cli.py  edges.schema.json  init.py  number.py  paths.py  refs.py  render.py  schema.py  staleness.py  validate.py
science-tool/src/science_tool/datasets/: __init__.py  _base.py  dryad.py  geo.py  semantic_scholar.py  validate.py  zenodo.py
science-tool/src/science_tool/distill/: __init__.py  openalex.py  pykeen_source.py
science-tool/src/science_tool/graph/: __init__.py  cross_impact.py  entity_registry.py  errors.py  export_types.py  health.py  materialize.py  migrate.py  project_model_migration.py  reference_resolution.py  (+6 more)
science-tool/tests/: conftest.py  dogfood_mm30_receipt.md  test_acceptance_managed_artifacts.py  test_aspects_cli.py  test_aspects_helpers.py  test_aspects_migrate.py  test_big_picture_cli.py  test_big_picture_frontmatter.py  test_big_picture_resolver.py  test_big_picture_validator.py  test_causal.py  test_causal_cli.py  test_cli_artifacts_check.py  test_cli_artifacts_diff.py  test_cli_artifacts_exec.py  test_cli_artifacts_install.py  test_cli_artifacts_list.py  test_cli_artifacts_pin.py  test_cli_artifacts_unpin.py  test_cli_artifacts_update.py  test_codex_skills.py  test_command_docs.py  test_cross_impact.py  test_curate_cli.py  test_curate_inventory.py  test_data_package_migrate.py  test_data_package_migrate_e2e.py  test_dataset_reconcile.py  test_dataset_register_run.py  test_datasets.py  test_datasets_cli.py  test_datasets_list_cli.py  test_datasets_validate.py  test_distill.py  test_entities.py  test_entities_cli.py  test_entity_errors.py  test_entity_registry.py  test_extension_registration.py  test_extensions_validate_hooks.py  (+78 more)
science-tool/tests/_fixtures/: entity_helpers.py  migration_add_phase.py  validate_hooks_canonical.sh
science-tool/tests/dag/: test_audit.py  test_cli.py  test_fixture_mm30_sanity.py  test_number.py  test_paths.py  test_refs_validation.py  test_render.py  test_schema.py  test_schema_artifact.py  test_staleness.py  test_validate.py  test_validate_cli.py
science-tool/tests/skills_lint/: test_cli.py  test_lint.py
science-tool/tests/test_entity_providers/: test_aggregate_provider.py  test_base.py  test_datapackage_directory_provider.py  test_description_field.py  test_markdown_provider.py  test_provider_field.py  test_record.py  test_resolver.py
science-tool/tests/test_storage_adapters/: test_aggregate.py  test_base.py  test_datapackage.py  test_markdown.py  test_task.py
(+517 files in other folders)
